--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - .env
     volumes:
       - ./data:/app/data
+      - /root/cobalt:/root/cobalt
     networks:
       - cobalt-network
 
